<!--
    Homework 1
    MainActivity.kava
    Yi Zhuo
    Miruthulavarshini Shanmugam
    Leif Brooks
    -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstlayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/weightlabel"
            android:id="@+id/weightlabel"
            android:layout_alignBottom="@+id/weighttext"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            android:layout_weight="0.15"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/weighttext"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/weightlabel"
            android:layout_toStartOf="@+id/Resetbutton"
            android:hint="@string/enterweight"
            android:layout_weight="0.25"
            android:inputType="number" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/gender"
            android:showText="true"
            android:textOff="F"
            android:textOn="M"
            android:id="@+id/genderswitch"
            android:layout_alignBottom="@+id/weighttext"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/weighttext"
            android:layout_toEndOf="@+id/weighttext"
            android:layout_weight="0.33"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savebutton"
        android:id="@+id/savebutton"
        android:layout_below="@+id/firstlayout"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/savebutton"
        android:id="@+id/thirdlayout"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinksize"
            android:id="@+id/drinksizelabel"
            android:textSize="20dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1oz"
                android:id="@+id/radioButton1"
                android:checked="false"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio5oz"
                android:id="@+id/radioButton2"
                android:checked="false"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio12oz"
                android:id="@+id/radioButton3"
                android:checked="false"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fourthlayout"
        android:layout_below="@id/thirdlayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcohol"
            android:id="@+id/textView2"
            android:layout_weight="0.25"/>

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="5"
            android:progress="1"
            android:indeterminate="false"
            android:layout_weight="0.65"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/indicator"
            android:text="@string/alcContent"
            android:layout_weight="0.25"
             />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fifthlayout"
        android:layout_below="@+id/fourthlayout"
        android:paddingTop="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adddrink"
            android:id="@+id/adddrinkbutton"
             android:layout_weight="0.50"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetbutton"
                    android:layout_weight="0.50"/>
    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/baclevel"
        android:id="@+id/bacleveltextview"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/fifthlayout"
        android:gravity="center"
        android:textSize="30dp"
         />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/progressBar"
        android:layout_below="@+id/bacleveltextview"
        android:max="25"
        android:progress="0"
        android:indeterminate="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eighthlayout"
        android:layout_below="@+id/progressBar"
        android:gravity="center">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/stat"
            android:id="@+id/Status"
            android:paddingRight="20dp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="@string/statusText"
            android:textColor="#ffffff"
            android:id="@+id/statustextview"
            android:textSize="20dp"
            android:background="@drawable/greenrectangle"
            />
    </LinearLayout>

</RelativeLayout>
